translation-tool/inputs/source_meta/objects/Account_Billing_Spec__c.object
<CustomObject>
    <fields>
        <fullName>ALU_Prod_Name__c</fullName>
        <label>ALU Prod Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Billing Specs</relationshipLabel>
        <relationshipName>Account_Billing_Specs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                    <default>true</default>
                    <label>Consumer</label>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Billing_Spec_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Billing Spec Template</label>
        <referenceTo>Customer_Billing_Spec_Template__c</referenceTo>
        <relationshipLabel>Account Billing Specs</relationshipLabel>
        <relationshipName>Account_Billing_Specs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <label>Invoice Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Invoice_Identifier__c</fullName>
        <label>Portal Invoice Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Defined_Customer_Billing_Spec_Name__c</fullName>
        <formula>Customer_Billing_Spec_Template__r.User_Defined_Customer_Billing_Spec_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Defined Customer Billing Spec Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS__c</fullName>
        <label>WBS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Account Billing Spec</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ALU_Prod_Name__c</columns>
        <columns>Business_Segment__c</columns>
        <columns>Customer_Billing_Spec_Template__c</columns>
        <columns>WBS__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>User_Defined_Customer_Billing_Spec_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>

    <nameField>
        <displayFormat>ACBILPMS-{0000000000}</displayFormat>
        <label>Account Billing Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Billing Specs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>